# build-systems

./: CHANGELOG.md  NotHS  README.md  build-system.cabal
app/: Build.hs  Main.hs  RunBuildExample.hs  SimpleBuildExample.hs  SpreadsheetExample.hs
app/Abstract/: Compiler.hs  CompilerIO.hs  Operations.hs  Simple.hs
app/Example/: CompilerBuck2.hs  CompilerShake.hs  CompilerSimpleShake.hs  CompilerSimpleShakePar.hs  SimpleShake.hs  Spreadsheet.hs
app/System/: Buck2.hs  Shake.hs  SimpleShake.hs  SimpleShakePar.hs
