cabal-version:   3.14
name:            build-system
version:         0.1.0.0
license:         NONE
author:          Matthew Pickering
maintainer:      matthewtpickering@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable build-system
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.20.0.0, dependent-map, some, dependent-sum, mtl, containers,
    other-modules:  Abstract.Compiler
                    Example.CompilerShake
                    Example.CompilerSimpleShake
                    Example.Spreadsheet
                    System.Shake
                    System.SimpleShake
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:     -Wno-x-partial
