cabal-version:   3.14
name:            build-system
version:         0.1.0.0
license:         NONE
author:          Matthew Pickering
maintainer:      matthewtpickering@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable build-system
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.7 && <5
                     , containers
                     , dependent-map
                     , dependent-sum
                     , mtl
                     , transformers
                     , directory
                     , filepath
                     , stm
                     , async
                     , time
    other-modules:    System.SimpleShake
                     , System.SimpleShakePar
                     , System.Shake
                     , Example.CompilerSimpleShake
                     , Example.CompilerSimpleShakePar
                     , Example.CompilerShake
                     , Example.Spreadsheet
                     , Abstract.Compiler
                     , Abstract.Operations
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:     -Wno-x-partial -threaded -with-rtsopts=-N
